# ShellMate

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/v1/routes/: chat.py  commands.py  keys.py  servers.py  sessions.py
backend/app/core/: config.py  error_handling.py  exceptions.py  logging_config.py
backend/app/repositories/: server_repository.py
backend/app/schemas/: chat.py  command.py  key.py  server.py  session.py
backend/app/services/: key_storage_service.py  server_service.py  ssh_service.py
frontend/: app.py
src/deployments/: docker_helpers.py  docker_pipeline.py  engine.py  models.py  preparation.py  utils.py
src/gateway/: websocket_server.py
src/runtime/: agent.py  config.py  models.py  ollama_client.py  server_context.py
src/skills/: base.py  builder_helpers.py  builder_skill.py  deployment_skill.py  docker_skills.py  registry.py  router.py  ssh_skill.py  web_dev_skills.py
src/storage/: session_store.py
src/tools/: builder_tool.py  docker_tools.py  ssh_tool.py  web_dev_tools.py
tests/: test_deployments.py  test_server_service.py
