[project]
name = "chat-linux-server-manager"
version = "0.1.0"
description = "Chat-based Linux server manager with FastAPI, Paramiko, and Streamlit."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "paramiko>=4.0.0",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.20",
    "streamlit>=1.57.0",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
